# saas-forge

./: .dockerignore  .gitignore  .npmignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  LICENSE  README.md  docker-compose.backend.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  snapcraft-login  template-sync.manifest.json  turbo.json
apps/backend/: .env.example  .gitignore  README.md  package.json  pyproject.toml
apps/backend/src/saas_forge_backend/: config.py  main.py
apps/backend/src/saas_forge_backend/agents/: echo_llm.py  noop.py  rag_chat.py  registry.py
apps/backend/src/saas_forge_backend/api/: middleware.py
apps/backend/src/saas_forge_backend/api/routes/: agents.py  health.py  jobs.py
apps/backend/src/saas_forge_backend/api/schemas/: agents.py  jobs.py
apps/backend/src/saas_forge_backend/db/: engine.py  models.py  schema_check.py
apps/backend/src/saas_forge_backend/jobs/: worker.py
apps/backend/src/saas_forge_backend/llm/: factory.py
apps/backend/src/saas_forge_backend/observability/: logging.py
apps/backend/src/saas_forge_backend/rag/: embedders.py  ingestion.py  knowledge.py  vector_store.py
apps/backend/tests/: conftest.py  test_agents_noop.py  test_agents_stream_endpoint.py  test_db_engine.py  test_echo_llm_agent.py  test_embedders.py  test_health.py  test_ingestion_unit.py  test_llm_factory.py  test_middleware_hmac.py  test_reaper.py  test_redis_status.py  test_security_hmac.py  test_splitters.py  test_sse.py  test_vector_store_factory.py
apps/backend/tests/integration/: test_async_job_e2e.py
(+530 files in other folders)
